2004-09-29  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-client.adb:
	(Create): Do not connect to server, for be able to call
	 Set_Proxy_Authentication before socket connection.
	(Get_Certificate): Make socket connection if necessary.

	* aws-net-ssl.ads:
	(Secure_Client): Update comments.
	(Secure_Server): Update comments.
	(Do_Handshake): New routine.

	* aws-net-ssl.adb:
	(Connect): Do not call SSL_set_connect_state.
	(Accept): Do not call SSL_set_accept_state.
	(Do_Handshake): New routine.

2004-09-28  Pascal Obry  <pascal@obry.org>

	* aws-client.adb:
	(Read_Status_Line): Use 'Length instead of 'Last in the slice. This
         is cleaner in this case.

	* aws-services-transient_pages.adb:
	(Register): Rename Need_Start_Cleaner to Need_Start.

	* aws-services-transient_pages.ads:
	(Register): Rename Need_Start_Cleaner to Need_Start.
        Update copyright notice.

2004-09-28  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-client.adb:
	(Open_Send_Common_Header): Move tunnel creation to Connect.
	(Send_Authentication_Header): Move to the library level.
	(Port_Not_Default): Move to the library level.
	(Create): Connect to server. Need for get certificate just after
	 connect creation.
	New implementation could get server certificate even thru proxy just
	 after connect creation.
	(Connect): send CONNECT command to proxy if necessary. Do not send
	 Proxy-Connection header line.

2004-09-28  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-client.adb:
	(Open_Send_Common_Header): Make tunnel only when need reconnect.
	(Create): Do not connect to server. It would be done in
	 Open_Send_Common_Header.

	* aws-client.ads:
	(HTTP_Connection): Remove Tunneling field.

2004-09-28  Pascal Obry  <pascal@obry.org>

	* aws-client.adb:
	(Open_Send_Common_Header): Fix tunnel creation with persistent
	 connections. The tunnel creation is now done only the first time
	 as the proxy authentication.

	* aws-client.ads: